@@ -15,40 +15,40 @@ namespace
 int Backend_PID = 0;
 
 
-// Sample implementation of notification listener
-class TestListener : public notify_listener
+// Sample implementation of notification receiver.
+class TestListener : public notification_receiver
 {
-  bool m_Done;
+  bool m_done;
 
 public:
   explicit TestListener(connection_base &C) :
-	notify_listener(C, "listen"), m_Done(false) {}
+	notification_receiver(C, "listen"), m_done(false) {}
 
-  virtual void operator()(int be_pid)
+  virtual void operator()(const string &, int be_pid)
   {
-    m_Done = true;
+    m_done = true;
     PQXX_CHECK_EQUAL(
 	be_pid,
 	Backend_PID,
 	"Notification came from wrong backend process.");
   }
 
-  bool Done() const { return m_Done; }
+  bool done() const { return m_done; }
 };
 
 
-// A transactor to trigger our notification listener
+// A transactor to trigger our notification receiver.
 class Notify : public transactor<>
 {
-  string m_notif;
+  string m_channel;
 
 public:
-  explicit Notify(string NotifName) :
-    transactor<>("Notifier"), m_notif(NotifName) { }
+  explicit Notify(string channel) :
+    transactor<>("Notifier"), m_channel(channel) { }
 
   void operator()(argument_type &T)
   {
-    T.exec("NOTIFY \"" + m_notif + "\"");
+    T.exec("NOTIFY \"" + m_channel + "\"");
     Backend_PID = T.conn().backendpid();
   }
 };
@@ -60,10 +60,10 @@ void test_004(transaction_base &T)
 
   TestListener L(T.conn());
 
-  T.conn().perform(Notify(L.name()));
+  T.conn().perform(Notify(L.channel()));
 
   int notifs = 0;
-  for (int i=0; (i < 20) && !L.Done(); ++i)
+  for (int i=0; (i < 20) && !L.done(); ++i)
   {
     PQXX_CHECK_EQUAL(notifs, 0, "Got unexpected notifications.");
 
@@ -74,7 +74,7 @@ void test_004(transaction_base &T)
     notifs = T.conn().get_notifs();
   }
 
-  PQXX_CHECK_NOT_EQUAL(L.Done(), false, "No notification received.");
+  PQXX_CHECK_NOT_EQUAL(L.done(), false, "No notification received.");
   PQXX_CHECK_EQUAL(notifs, 1, "Got too many notifications.");
 }
 
