@@ -1,3 +1,8 @@
+2012-01-18  Jeroen T. Vermeulen <jtv@xs4all.nl>
+ test/test004.cxx, test/test023.cxx, test/test078.cxx, test/test079.cxx,
+ test/test087.cxx:
+ - Stop using deprecated notify_listener.
+ - Stop using deprecated connection-unaware escaping functions.
 2011-12-03  Jeroen T. Vermeulen <jtv@xs4all.nl>
  include/pqxx/tuple.hxx:
  - Forward-declare pqxx::range_error.
